n8n/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  labels:
    shared-gateway-access: "true"
