n8n/routes.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-tunnel
  namespace: n8n
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: n8n.mydomain.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
